tests/testcases/invalid/semantic/73_increment_literal.ciel
// Error: literal is not an lvalue
int main() {
    // Error: cannot increment a literal (rvalue)
    5++;

    return 0;
}
